; ModuleID = '/home/carl/AnghaBench/git/extr_bisect.c_mark_for_removal.c'
source_filename = "/home/carl/AnghaBench/git/extr_bisect.c_mark_for_removal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.string_list = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"refs/bisect%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.object_id*, i32, i8*)* @mark_for_removal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mark_for_removal(i8* %0, %struct.object_id* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.string_list*, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.object_id* %1, %struct.object_id** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to %struct.string_list*
  store %struct.string_list* %12, %struct.string_list** %9, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i8* @xstrfmt(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %13)
  store i8* %14, i8** %10, align 8
  %15 = load %struct.string_list*, %struct.string_list** %9, align 8
  %16 = load i8*, i8** %10, align 8
  %17 = call i32 @string_list_append(%struct.string_list* %15, i8* %16)
  ret i32 0
}

declare dso_local i8* @xstrfmt(i8*, i8*) #1

declare dso_local i32 @string_list_append(%struct.string_list*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
